--- a/html/home.html
+++ b/html/home.html
@@ -2,3 +2,19 @@
     <li><a href="/todo/">Private Todo</a></li>
     <li><a href="/shared/">Shared Todo</a></li>
 </ul>
+<div class="panel boxed panel-default panelzone">
+    <div class="panel-body">
+        <h3>Private <span class="badge">42</span></h3>
+        <ul>
+            <li><a href="/todo/">Todo</a></li>
+        </ul>
+    </div>
+</div>
+<div class="panel boxed panel-default panelzone">
+    <div class="panel-body">
+        <h3>Shared <span class="badge">42</span></h3>
+        <ul>
+            <li><a href="/shared/">Todo</a></li>
+        </ul>
+    </div>
+</div>
