--- a/html/document/new.html
+++ b/html/document/new.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<form action="/document/new" method="post" enctype="multipart/form-data">
+    Select file to upload:
+    <input type="file" name="file" id="file"><br><br>
+    <input type="submit" value="Upload File" name="submit">
+</form>
