--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Todo List</a>
+            <a class="navbar-brand" href="/">{{applicationName}}</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             {{navBarActions}}
@@ -86,6 +86,106 @@
         });
     });
 </script>
+
+<script>
+    function getFormattedTime() {
+        const now = new Date();
+        const days = ['Sonntag', 'Montag', 'Dienstag', 'Mittwoch', 'Donnerstag', 'Freitag', 'Samstag'];
+        const months = [
+            'Januar', 'Februar', 'März', 'April', 'Mai', 'Juni',
+            'Juli', 'August', 'September', 'Oktober', 'November', 'Dezember'
+        ];
+
+        const dayName = days[now.getDay()];
+        const day = now.getDate();
+        const monthName = months[now.getMonth()];
+        const year = now.getFullYear();
+        const hours = now.getHours().toString().padStart(2, '0');
+        const minutes = now.getMinutes().toString().padStart(2, '0');
+
+        const suffix = (day) => {
+            if (day > 3 && day < 21) return 'ten'; // Covers 11th-20th
+            switch (day % 10) {
+                case 1: return 'sten';
+                case 2: return 'ten';
+                case 3: return 'ten';
+                default: return 'ten';
+            }
+        };
+
+        return `${hours}:${minutes}`;
+    }
+    function getFormattedDate() {
+        const now = new Date();
+        const days = ['Sonntag', 'Montag', 'Dienstag', 'Mittwoch', 'Donnerstag', 'Freitag', 'Samstag'];
+        const months = [
+            'Januar', 'Februar', 'März', 'April', 'Mai', 'Juni',
+            'Juli', 'August', 'September', 'Oktober', 'November', 'Dezember'
+        ];
+
+        const dayName = days[now.getDay()];
+        const day = now.getDate();
+        const monthName = months[now.getMonth()];
+        const year = now.getFullYear();
+        const hours = now.getHours().toString().padStart(2, '0');
+        const minutes = now.getMinutes().toString().padStart(2, '0');
+
+        const suffix = (day) => {
+            if (day > 3 && day < 21) return 'ten'; // Covers 11th-20th
+            switch (day % 10) {
+                case 1: return 'sten';
+                case 2: return 'ten';
+                case 3: return 'ten';
+                default: return 'ten';
+            }
+        };
+
+        return `${dayName}, ${day}. ${monthName}`;
+    }
+
+    function updateDateTime() {
+        document.getElementById('currentDateTime').value = getFormattedTime();
+    }
+
+    setInterval(updateDateTime, 1000);
+
+</script>
+<script>
+    document.getElementById('current-date').innerText = getFormattedDate();
+</script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var editableText = document.getElementById('editableText');
+
+        editableText.addEventListener('click', function() {
+            var currentText = editableText.textContent;
+            var input = document.createElement('input');
+            input.type = 'text';
+            input.value = currentText;
+
+            // Replace paragraph with input field
+            editableText.replaceWith(input);
+            input.focus();
+
+            // Function to replace input with text
+            function replaceInputWithText() {
+                var newText = input.value;
+                editableText.textContent = newText;
+                input.replaceWith(editableText);
+            }
+
+            // Blur event to replace input with text
+            input.addEventListener('blur', replaceInputWithText);
+
+            // Enter key event to replace input with text
+            input.addEventListener('keyup', function(e) {
+                if (e.key === 'Enter') {
+                    replaceInputWithText();
+                }
+            });
+        });
+    });
+    </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
