--- a/html/timeentry/new.html
+++ b/html/timeentry/new.html
@@ -5,13 +5,14 @@
     <div class="panel-body">
         <img src="/images/avatars/teddy.jpg" alt="Employee Avatar" class="avatar">
         <h1 id="current-date"></h1>
+        {% if not enable_start_button %}<p>Läuft seit {{start_time}}</p>{% endif %}
         <form action="/time_entry/" method="post">
             <label for="currentDateTime">Uhrzeit</label><br>
             <input name="event_time" id="currentDateTime" type="text" class="form-control time-input"
                    placeholder="Enter Time">
 
-            <button type="submit" name="event_type" value="start" class="btn btn-success btn-block">Start Work</button>
-            <button type="submit" name="event_type" value="stop" class="btn btn-danger btn-block">End Work</button>
+            <button type="submit" name="event_type" value="start" class="btn btn-success btn-block"{% if not enable_start_button %} disabled{% endif %}>Start Work</button>
+            <button type="submit" name="event_type" value="stop" class="btn btn-danger btn-block"{% if enable_start_button %} disabled{% endif %}>End Work</button>
         </form>
     </div>
 </div>
