--- a/html/timeentry/edit.html
+++ b/html/timeentry/edit.html
@@ -1,7 +1,14 @@
-<form action="/list/edit?{{id}}" method="post">
-    <label for="query">Query</label>
-    <input class="form-control" type="text" id="query" name="query" value="{{query}}"><br>
-    <button class="btn btn-block btn-lg btn-success" type="submit" id="Update Entry" name="Update Entry">Änderungen
+<form action="/list/update" method="post">
+    <h3>{{day}}, {{date}} </h3>
+    <label for="start_time">Von</label>
+    <input class="form-control" type="time" step="60" id="start_time" name="start_time" value="{{start_time}}"> <br/>
+    <label for="end_time">Bis</label>
+    <input class="form-control" type="time" step="60" id="end_time" name="end_time" value="{{end_time}}"> <br/>
+    Stunden: <span id="hours"></span><br/>
+    <input type="hidden" id="id_start" name="id_start" value="{{id_start}}">
+    <input type="hidden" id="id_end" name="id_end" value="{{id_end}}">
+
+     <button class="btn btn-block btn-lg btn-success" type="submit" id="Update Entry" name="Update Entry">Eintrag
         Speichern
     </button>
 </form>
