--- a/html/timeentry/list.html
+++ b/html/timeentry/list.html
@@ -18,7 +18,9 @@
     </ul>
 </div>
 <br>
-
+<a href="/list/create" class="button btn btn-default">Zeit eintragen</a>
+<br>
+<br>
 <div class="panel panel-default">
     <table class="table">
         <thead>
@@ -27,7 +29,7 @@
                 <th>Datum</th>
                 <th>Zeiten</th>
                 <th>Stunden</th>
-                {% if enable_edit %}<th></th>{% endif %}
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -37,13 +39,17 @@
                 <td>{{row.date}}</td>
                 <td>{{row.start_time}} - {{row.end_time}}</td>
                 <td>{{row.hours}}</td>
-                {% if enable_edit %}<td><a href="/list/edit?{{row.start_id}}-{{row.end_id}}" class="edit button btn btn-success btn-sm">✏️ <span class="hidden-xs">Bearbeiten</span></a></td>{% endif %}
+                <td>
+                    {% if row.enable_edit %}
+                        <a href="/list/edit?{{row.start_id}}-{{row.end_id}}" class="edit button btn btn-success btn-sm">✏️ <span class="hidden-xs">Bearbeiten</span></a>
+                    {% endif %}
+                </td>
             </tr>
 ## endfor
             <tr>
                 <th colspan="3">Summe</th>
                 <th>{{total_hours}}</th>
-                {% if enable_edit %}<th></th>{% endif %}
+                <th></th>
             </tr>
         </tbody>
     </table>
