--- a/html/timeentry/report.html
+++ b/html/timeentry/report.html
@@ -1,14 +1,53 @@
-<table class="table">
-    <thead>
-    <tr>
-        <th>Username</th>
-    </tr>
-    </thead>
-    <tbody>
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+        {% for year in years %}
+        <li {% if year.selected %} class="active"{% endif %}><a href="?year={{year.year}}">{{year.year}}</a></li>
+        {% endfor %}
+    </ul>
+</nav>
+
+<div>
+    <ul class="nav nav-pills mb-4" id="monthTabs" role="tablist">
+        {% for month in months %}
+        <li role="presentation" {% if month.selected %} class="active"{% endif %}>
+            <a href="?year={{selected_year}}&month={{month.month_number}}">
+                {{month.month}}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
     {% for user in users %}
-    <tr>
-        <td>{{user.username}}</td>
-    </tr>
+    <h3>{{user.name}}</h3>
+            <div class="panel panel-default">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Tag</th>
+                        <th>Datum</th>
+                        <th>Zeiten</th>
+                        <th>Stunden</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for row in user.rows %}
+                    <tr>
+                        <td>{{row.day}}</td>
+                        <td>{{row.date}}</td>
+                        <td>{{row.start_time}} - {{row.end_time}}</td>
+                        <td>{{row.hours}}</td>
+                        <td>
+
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <th colspan="3">Summe</th>
+                        <th>{{user.total_hours}}</th>
+                        <th></th>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
     {% endfor %}
-    </tbody>
-</table>
