progress, notes in Time Entries

--- a/html/timeentry/edit.html
+++ b/html/timeentry/edit.html
@@ -4,9 +4,11 @@
     <input class="form-control" type="time" step="60" id="start_time" name="start_time" value="{{start_time}}"> <br/>
     <label for="end_time">Bis</label>
     <input class="form-control" type="time" step="60" id="end_time" name="end_time" value="{{end_time}}"> <br/>
-    Stunden: <span id="hours"></span><br/>
+    <!--Stunden: <span id="hours"></span><br/>-->
     <input type="hidden" id="id_start" name="id_start" value="{{id_start}}">
     <input type="hidden" id="id_end" name="id_end" value="{{id_end}}">
+    <label for="note">Notiz: </label><br/>
+    <input class="form-control" type="text" id="note" name="note" value="{{note}}"><br/>
 
      <button class="btn btn-block btn-lg btn-success" type="submit" id="Update Entry" name="Update Entry">Eintrag
         Speichern
