--- a/html/timeentry/new.html
+++ b/html/timeentry/new.html
@@ -11,6 +11,8 @@
             <input name="event_time" id="currentDateTime" type="text" class="form-control time-input"
                    placeholder="Enter Time" value="{{currentLocalTime}}">
 
+            <input type="text" class="form-control" placeholder="Notizen" name="note" id="note"><br>
+
             <input type="hidden" name="current_date" value="{{current_date}}">
             <input type="hidden" name="current_date_pretty" value="{{current_date_pretty}}">
 
