--- a/html/index.html
+++ b/html/index.html
@@ -87,6 +87,7 @@
     });
 </script>
 
+
 <script>
     function getFormattedTime() {
         const now = new Date();
@@ -197,6 +198,15 @@
     });
     </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+        /*$('#right').tooltip();*/
+        $('.note_tooltip').each(function() {
+            $(this).tooltip();
+        });
+    });
+</script>
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body></html>
