--- a/html/timeentry/list.html
+++ b/html/timeentry/list.html
@@ -18,11 +18,6 @@
     </ul>
 </div>
 <br>
-<!--
-<a href="/list/create" class="button btn btn-default">Zeit eintragen</a>
-<br>
-<br>
--->
 <div class="panel panel-default">
     <table class="table">
         <thead>
@@ -35,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-## for row in rows
+        {% for row in rows %}
             <tr>
                 <td>{{row.day}}</td>
                 <td>{{row.date}}</td>
@@ -45,15 +40,16 @@
                     {% if row.enable_edit %}
                         <a href="/list/edit?{{row.start_id}}-{{row.end_id}}" class="edit button btn btn-success btn-sm">✏️ <span class="hidden-xs">Bearbeiten</span></a>
                     {% endif %}
-                    <button type="button" class="btn btn-warning btn-sm">Notiz</button>
                 </td>
             </tr>
+            {% if row.show_note %}
             <tr>
                 <td colspan="5">
                     <div class="alert alert-warning" role="alert">Notiz: {{row.note}}</div>
                 </td>
             </tr>
-## endfor
+            {% endif %}
+        {% endfor %}
             <tr>
                 <th colspan="3">Summe</th>
                 <th>{{total_hours}}</th>
@@ -62,3 +58,4 @@
         </tbody>
     </table>
 </div>
+<a href="/list/new" class="button btn btn-success">📄 Nachtragen ...</a>
