--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,9 @@
             width: 100%;
             margin: 10px 0;
         }
+        .yearly_calendar td {
+            padding: 1px;
+        }
     </style>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">
     <script>
